syntax = "proto3";

package InnerTube.Protobuf.Renderers;

import "general.proto";
import "endpoints.proto";

message RendererWrapper {
  oneof renderer {
    ResultsContainer resultsContainer = 49399797;
    PlayerCaptionsTracklistRenderer captionsTrackListRenderer = 51621377;
    TwoColumnWatchNextResults twoColumnWatchNextResults = 51779759; 
    PlayerStoryboardSpecRenderer playerStoryboardSpecRenderer = 55735497;
    PlayerMicroformatRenderer playerMicroformatRenderer = 58514816;
    ButtonViewModel buttonViewModel = 65153809;
    MenuRenderer menuRenderer = 66439850;
    MenuNavigationItemRenderer menuNavigationItemRenderer = 66441108;
    VideoViewCountRenderer videoViewCountRenderer = 70044402;
    PlayerLiveStoryboardSpecRenderer playerLiveStoryboardSpecRenderer = 70276274;
    AccessibilityData accessibilityData = 75730170;
    LikeButtonViewModel likeButtonViewModel = 79971800;
    VideoPrimaryInfoRenderer videoPrimaryInfoRenderer = 100048340;
    EndscreenRenderer endscreenRenderer = 106301526;
    EndscreenElementRenderer endscreenElementRenderer = 105860658;
    ThumbnailOverlayTimeStatusRenderer thumbnailOverlayTimeStatusRenderer = 121720768;
    MenuFlexibleItemRenderer menuFlexibleItemRenderer = 355255079;
    SegmentedLikeDislikeButtonViewModel segmentedLikeDislikeButtonViewModel = 452133865;
  }
}

message ResultsContainer {
  repeated RendererWrapper results = 1;
}

message PlayerCaptionsTracklistRenderer {
  message Caption {
    string baseUrl = 1;
    InnerTube.Protobuf.Text name = 2;
    string vssId = 3;
    string language = 4;
    string kind = 5;
    bool isTranslatable = 7;
  }

  message CaptionAudioTrack {
    repeated int32 captionTrackIndices = 2;
    optional bool defaultCaptionTrackIndex = 3;
    optional int32 visibility = 5;
    optional bool hasDefaultTrack = 6;
    string audioTrackId = 8;
    optional int32 captionsInitialState = 11;
  }

  message TranslationLanguage {
    string languageCode = 1;
    InnerTube.Protobuf.Text languageName = 2;
    repeated int32 excludeAudioTrackIndices = 4;
  }

  repeated Caption captions = 1;
  repeated CaptionAudioTrack audioTracks = 2;
  repeated TranslationLanguage translationLanguages = 3;
  int32 defaultAudioTrackIndex = 4;
}

message TwoColumnWatchNextResults {
  RendererWrapper results = 1;
  RendererWrapper secondaryResults = 2;
  RendererWrapper autoplay = 4;
}

message PlayerStoryboardSpecRenderer {
  string spec = 1;
  int32 recommendedLevel = 3;
  int32 highResolutionRecommendedLevel = 7;
}

message PlayerMicroformatRenderer {
  message Embed {
    string embedUrl = 1;
    int32 width = 3;
    int32 height = 4;
  }

  Thumbnails thumbnail = 1;
  Embed embed = 2;
  Text title = 3;
  Text description = 4;
  int32 lengthSeconds = 5;
  string ownerProfileUrl = 6;
  string externalChannelId = 8;
  bool isFamilySafe = 9;
  repeated string availableCountries = 10;
  bool isUnlisted = 11;
  bool hasYpcMetadata = 12;
  string viewCount = 14;
  string category = 15;
  string publishDate = 16;
  string ownerChannelName = 17;
  string uploadDate = 19;
}

message ButtonViewModel {
  Text title = 5;
  string accessibilityText = 11;
  RendererWrapper accessibilityData = 16;
}

message MenuRenderer {
  repeated RendererWrapper items = 1;
  repeated RendererWrapper topLevelButtons = 6;
  RendererWrapper accessibility = 10;
  repeated RendererWrapper flexibleItems = 20;
}

message MenuNavigationItemRenderer {
  Text text = 1;
  Icon icon = 2;
  Endpoints.Endpoint endpoint = 3;
}

message VideoViewCountRenderer {
  Text viewCount = 1;
  Text shortViewCount = 4;
  int32 originalViewCount = 9;
}

message PlayerLiveStoryboardSpecRenderer {
  string spec = 1;
}

message AccessibilityData {
  string label = 2;
}

message LikeButtonViewModel {
  Icon icon = 1;
  Text text = 6;
  Text toggledText = 9;
  AccessibilityData accessibilityText = 11;
  string tooltip = 14;
  string toggledTooltip = 15;
  string identifier = 24;
}

message VideoPrimaryInfoRenderer {
  Text title = 1;
  RendererWrapper viewCount = 3;
  RendererWrapper videoActions = 4;
  Text dateText = 14;
  Text relativeDateText = 21;
}

message EndscreenRenderer {
  repeated RendererWrapper elements = 1;
  int32 startMs = 2;
}

message EndscreenElementRenderer {
  enum EndscreenElementStyle {
    INVALID = 0;
    VIDEO = 1;
    PLAYLIST = 2;
    CHANNEL = 3;
    WEBSITE = 4;
  }

  EndscreenElementStyle style = 1;
  Thumbnails image = 2;
  optional Thumbnails icon = 3;
  float left = 6;
  float width = 7;
  float top = 8;
  float aspectRatio = 9;
  int32 startMs = 10;
  int32 endMs = 11;
  Text title = 12;
  Text metadata = 13;
  optional Text callToAction = 14;
  optional Text dismiss = 15;
  InnerTube.Protobuf.Endpoints.Endpoint endpoint = 16;
  string id = 31;
  RendererWrapper thumbnailOverlays = 32;
}

message ThumbnailOverlayTimeStatusRenderer {
  InnerTube.Protobuf.Text text = 1;
  int32 style = 2;
}

message MenuFlexibleItemRenderer {
  RendererWrapper menuItem = 1;
  RendererWrapper topLevelButton = 2;
}

message SegmentedLikeDislikeButtonViewModel {
  RendererWrapper likeButtonViewModel = 1;
  RendererWrapper dislikeButtonViewModel = 2;
}